# sg-tba

./: Cargo.toml  README.md
.cargo/: config
contracts/manager/: Cargo.toml
contracts/manager/examples/: schema.rs
contracts/manager/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  payments.rs  query.rs  state.rs  utils.rs
contracts/sg-tba-registry/: Cargo.toml
contracts/sg-tba-registry/examples/: schema.rs
contracts/sg-tba-registry/src/: execute.rs  helpers.rs
contracts/sg-token-account/: Cargo.toml
contracts/sg-token-account/src/: contract.rs
contracts/sg82-base/: Cargo.toml  README.md
contracts/sg82-base/examples/: schema.rs
contracts/sg82-base/schema/: sg82-base.json
contracts/sg82-base/src/: contract.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs  utils.rs
contracts/sg82-base/src/schema/: sg82-base.json
contracts/sg82-token-account/: Cargo.toml
contracts/sg82-token-account/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs  utils.rs
contracts/sg83-base/: Cargo.toml  README.md
contracts/sg83-base/examples/: schema.rs
contracts/sg83-base/schema/: sg83-base.json
contracts/sg83-base/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  registry.rs  state.rs  sudo.rs  utils.rs
contracts/sg83-tba-registry/: Cargo.toml
contracts/sg83-tba-registry/examples/: schema.rs
contracts/sg83-tba-registry/schema/: sg83-tba-registry.json
contracts/sg83-tba-registry/src/: contract.rs  execute.rs  helpers.rs  msg.rs  query.rs  state.rs
e2e/: Cargo.toml
e2e/src/helpers/: helper.rs
e2e/src/tests/: setup_test.rs  token_account_test.rs  token_registry_test.rs
schema/: sg83-base.json  sg83-tba-registry.json
scripts/: optimize.sh  schema.sh
