[workspace]
members = [
    "contracts/*",
    "e2e"
]

resolver = "2"

[workspace.package]
version    = "1.0.0"
edition    = "2021"
repository = "https://github.com/MegaRockLabs/cw-extra"


[workspace.dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std = { version = "1.4.1", default-features = false }
cw-storage-plus = "1.1.0"

k256                 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
sha2                 = { version = "0.10.2", default-features = false }

schemars                = "0.8.15"
semver                  = "1.0.20"
thiserror               = "1.0.50"

cw-ownable              = "0.5.1"
cw-utils                = "1.0.2"
cw1                     = "1.1.1"
cw2                     = "1.1.1"

cw81                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw81" }
cw82                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw82" }
cw83                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw83" }


cw22                    = { git = "https://github.com/aura-nw/cw-plus", package = "cw22" }
cw721                   = "0.18.0"
sg721                   = "3.3.0"
sg721-base              = "3.3.0"

sg82-token-account      = { path = "contracts/sg82-token-account" }
sg83-tba-registry       = { path = "contracts/sg83-tba-registry" }

[profile.release.package.cw81]
codegen-units = 1
incremental = false

[profile.release.package.cw82]
codegen-units = 1
incremental = false

[profile.release.package.cw83]
codegen-units = 1
incremental = false

[profile.release.package.cw82-token-account]
codegen-units = 1
incremental   = false

[profile.release.package.cw83-tba-registry]
codegen-units = 1
incremental = false


[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
