[workspace]
members = [
    "contracts/*",
    "e2e"
]

resolver = "2"

[workspace.package]
version    = "1.0.2"
edition    = "2021"
repository = "https://github.com/MegaRockLabs/cw-extra"


[workspace.dependencies]
cosmwasm-std = { version = "1.4.1", default-features = false }
cosmwasm-schema = "1.4.1"
cw-storage-plus = "1.1.0"

k256                 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
sha2                 = { version = "0.10.2", default-features = false }

schemars                = "0.8.15"
semver                  = "1.0.20"
thiserror               = "1.0.50"

cw-ownable              = "0.5.1"
cw-utils                = "1.0.2"
cw1                     = "1.1.1"
cw2                     = "1.1.1"

cw81                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw81" }
cw82                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw82" }
cw83                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw83" }
cw22                    = { git = "https://github.com/aura-nw/cw-plus", package = "cw22" }
cw721                   = "0.18.0"

sg-std                  = "3.2.0"

sg721                   = "3.3.0"
sg721-base              = "3.3.0"

sg-tba                  = { path = "packages/sg-tba" }
sg82-base               = { path = "contracts/sg82-base" }
sg83-base               = { path = "contracts/sg83-base" }


[profile.release.package.sg82-base]
codegen-units = 1
incremental   = false

[profile.release.package.sg83-base]
codegen-units = 1
incremental = false


[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
