[package]
name = "sg82-token-account"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
description = "Stargaze Token Bound Account"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
sha2            = { workspace = true }
semver          = { workspace = true }
thiserror       = { workspace = true }
k256            = { workspace = true }

cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["staking", "stargate" ] }
cw-storage-plus = { workspace = true }
cw-ownable      = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw22            = { workspace = true }
cw82            = { workspace = true }
cw83            = { workspace = true }
cw721           = { workspace = true }
sg721-base      = { workspace = true, features = ["library"] }