[package]
name        = "sg83-base"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
description = "Stargaze Token Bound Account Registry"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
thiserror           = { workspace = true }
semver              = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw2                 = { workspace = true }
cw82                = { workspace = true }
cw83                = { workspace = true }
cw22                = { workspace = true }
cw721               = { workspace = true }
sg-std              = { workspace = true }
sg-tba              = { workspace = true }
sg82-base           = { workspace = true, features = ["library"] }
sg721-base          = { workspace = true, features = ["library"] }
stargaze-fair-burn  = { workspace = true, features = ["library"] }